Nav is fixed-position on mobile breakpoint

--- a/scss/0_base/1_bitters/_grid-settings.scss
+++ b/scss/0_base/1_bitters/_grid-settings.scss
@@ -4,8 +4,8 @@ body {
   margin: 0;
   min-height: 100vh;
 }
-.page-content {
-  min-height: 90vh;
+main {
+  min-height: 100vh;
 }
 
 // Neat Overrides
