--- a/scss/0_base/1_bitters/_variables.scss
+++ b/scss/0_base/1_bitters/_variables.scss
@@ -1,9 +1,9 @@
 // Typography
-$base-font-family: $helvetica;
+$base-font-family: 'Open Sans';
 $heading-font-family: $base-font-family;
 
 // Font Sizes
-$base-font-size: 1em;
+$base-font-size: 14px;
 
 // Line height
 $base-line-height: 1.5;
