--- a/scss/1_components/2_buttons/_button.scss
+++ b/scss/1_components/2_buttons/_button.scss
@@ -1,14 +1,11 @@
-$havelock-blue: #4A90E2;
-$sulu: #B8E986;
-$grey: #9E9E9E;
-
 .btn {
   border: 1px solid;
   border-radius: 2px;
-  padding: .5rem;
+  font-size: 10rem;
+  color: red;
   background: transparent;
   &:hover {
     background: white;
-    color: black;
+    color: $grey;
   }
 }
